--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+	--bg-color: #f1fafd;
+}
+
 body {
   margin: 50px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+	background-color: var(--bg-color);
 }
 
 code {
