feat(responsive): adapt project for various screen sizes

--- a/src/components/employee-add-form/employee-add-form.css
+++ b/src/components/employee-add-form/employee-add-form.css
@@ -15,3 +15,13 @@
   width: 350px;
   margin-right: 20px;
 }
+
+@media (max-width: 590px) {
+  .add-form {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .add-form input {
+    width: 100%;
+  }
+}
