--- a/src/components/app-filter/app-filter.css
+++ b/src/components/app-filter/app-filter.css
@@ -1,8 +1,37 @@
 .btn-group {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
-.btn-group>.btn {
-	position: relative;
-	flex: 0 1 auto;
+.btn-group > .btn {
+  position: relative;
+  flex: 0 1 auto;
+}
+
+@media (max-width: 700px) {
+  .btn-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 495px) {
+  .list-group-item span,
+	.list-group-item input {
+    font-size: 18px !important;
+  }
+
+	.list-group-item-input {
+		width: 110px;
+	}
+}
+@media (max-width: 375px) {
+  .list-group-item span,
+	.list-group-item input {
+    font-size: 16px !important;
+  }
+
+	.list-group-item-input {
+		/* max-width: 110px; */
+	}
 }
