--- a/src/components/app-info/app-info.css
+++ b/src/components/app-info/app-info.css
@@ -5,3 +5,21 @@
   box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
   color: #fff;
 }
+
+@media (max-width: 408px) {
+	.app-info h1 {
+		font-size: 24px;
+	}
+	.app-info h2 {
+		font-size: 22px;
+	}
+}
+
+@media (max-width: 362px) {
+	.app-info h1 {
+		font-size: 22px;
+	}
+	.app-info h2 {
+		font-size: 20px;
+	}
+}
